Changelog
=========

1.1.4 (unreleased)
------------------

- Added a method to add metadata in catalog.
  [thomasdesvenain]


1.1.3 (2013-08-27)
------------------

- Fixed updateObjectRoleMappings to use all workflows of the chain,
  not only the first one.
  [vincentfretin]


1.1.2 (2013-07-18)
------------------

- refreshResources method works if kss is not installed.
  [thomasdesvenain]


1.1.1 (2012-12-10)
------------------

- Fixed interface documentation.
  [thomasdesvenain]

- Better error handling when profile passed as runUpgradeStep method parameter
  doesn't exist.
  [thomasdesvenain]


1.1 (2012-10-05)
----------------

- monkey patch EtagSupport.http__refreshEtag during content migrations
  to not modify objects.
  [vincentfretin]

- Added a parameter to stop migration after n contents migrated.
  [thomasdesvenain]


1.0.1 (2012-09-03)
------------------

- Fixed run profile.


1.0 (2012-08-24)
----------------

- Package created using templer
  []