@@ -106,7 +106,8 @@ class UpgradeTool(object):
                                              importstep, run_dependencies=False,
                                              purge_old=purge_old)
 
-    def updateIndexes(self, index_tuples, catalogs=['portal_catalog'], reindex=True):
+    def updateIndexes(self, index_tuples, catalogs=['portal_catalog'],
+                      reindex=True, delete=False):
         """
         add and/or reindex indexes of catalogs
 
@@ -117,41 +118,49 @@ class UpgradeTool(object):
         portal = self.portal
         if type(catalogs) not in (tuple, list):
             catalogs = [catalogs]
-            
+
         catalogs = [getToolByName(portal, c) for c in catalogs]
         msgs = []
         for catalog in catalogs:
             for index, index_type in index_tuples:
+                if index in catalog.indexes():
+                    if catalog.indexes[index] != index_type:
+                        catalog.delIndex(index)
+                        msg = "Removed %s index with bad type in %s catalog" % (
+                            index, catalog.id)
+                        LOG.info(msg)
+                        msgs.append(msg)
+
                 if not index in catalog.indexes():
                     catalog.addIndex(index, index_type)
                     msg = "Added %s index in %s catalog" % (index, catalog.id)
                     LOG.info(msg)
                     msgs.append(msg)
-                    
+
                 if reindex:
                     LOG.info("reindex index %s on catalog %s", index, catalog.id)
                     catalog.reindexIndex(index, portal.REQUEST)
                 transaction.savepoint(optimistic=True)
-                
+
             LOG.info("Updated %s catalog", catalog.id)
-            
+
         indexes_msg = ", ".join([i[0] for i in index_tuples])
         transaction.savepoint(optimistic=True)
         msgs.append("Updated %s indexes" % indexes_msg)
         return msgs
-    
+
     def addMetadata(self, metadata, catalogs=['portal_catalog']):
         """
         add columns in catalog schema
         """
         if type(catalogs) not in (tuple, list):
             catalogs = [catalogs]
-            
+
         catalogs = [getToolByName(self.portal, c) for c in catalogs]
 
         if type(metadata) not in (tuple, list):
             metadata = [metadata]
-            
+
         msgs = []
         for catalog in catalogs:
             for column in metadata:
@@ -160,9 +169,9 @@ class UpgradeTool(object):
                     msg = "Added %s column" % column
                     LOG.info(msg)
                     msgs.append(msg)
-                    
-        return msgs 
-    
+
+        return msgs
+
     def migrateContent(self, portal_types, method,
                        catalogs=('portal_catalog',), query=None,
                        nofail=True, commit=False, stop_at_count=0):
